--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
   </div>
 </nav><div class="container template-home">
 <div class="row">
-  <main id="main" class="col-md-9"><div class="section level2">
-<h2 id="personal-cancer-genome-reporter-pcgr-">Personal Cancer Genome Reporter (PCGR) <a href="https://sigven.github.io/pcgr/"><img src="reference/figures/logo.png" align="right" height="106" width="90"></a>
+  <main id="main" class="col-md-9"><div class="section level1">
+<div class="page-header">
+<img src="logo.png" class="logo" alt=""><h1 id="personal-cancer-genome-reporter-pcgr-">Personal Cancer Genome Reporter (PCGR) 
 <a class="anchor" aria-label="anchor" href="#personal-cancer-genome-reporter-pcgr-"></a>
-</h2>
+</h1>
+</div>
 <p>The Personal Cancer Genome Reporter (PCGR) is a stand-alone software package for functional annotation and translation of individual tumor genomes for precision cancer medicine. It interprets primarily somatic SNVs/InDels and copy number aberrations, and has additional support for interpretation of bulk RNA-seq expression data. The software classifies variants both with respect to <em>oncogenicity</em>, and <em>actionability</em>. Interactive HTML output reports allow the user to interrogate the clinical impact of the molecular findings in an individual tumor.</p>
 <ul>
 <li>Variant classification
@@ -150,7 +152,6 @@
 </li>
 </ul>
 </div>
-</div>
 <div class="section level2">
 <h2 id="example-reports">Example reports<a class="anchor" aria-label="anchor" href="#example-reports"></a>
 </h2>
@@ -201,7 +202,7 @@
 </h2>
 <p>sigven AT ifi.uio.no</p>
 </div>
-
+</div>
   </main><aside class="col-md-3"><div class="links">
 <h2 data-toc-skip>Links</h2>
 <ul class="list-unstyled">
